# automatic_arc_melting_system

./: .gitignore  README.md  c_cpp_properties.json  st_arc_control.py  st_controltest.py  steps.txt  stock.txt  streamlit_config.json  streamlit_config.py
install/: local_setup.sh  setup.sh
launch/: launch_Instruments.py  launch_instruments.py  launch_main.py
log/: latest_build
ros2_utils/include/ros2_utils/: service_utils.hpp
ros2_utils/src/: service_utils.cpp
secquence/: full_seq.txt  production_seq.txt  seq_Fig4_binary_asynchronous.txt  seq_Fig4_quaternary_async.txt  seq_Fig4_quaternary_sequential.txt  seq_Fig4_ternary_asynchronous.txt  seq_Fig4_ternary_sequential.txt  seq_kt.txt  seq_kt_fullsequencial2.txt  seq_kt_supplevideo.txt  sequence_run.txt  test_run.txt  test_seq.txt  test_seq_kt.txt
segment/: arc_test.txt
sequence/: full_seq.txt  seq_Fig4_binary_sequential.txt  seq_Fig4_quaternary_sequential.txt  seq_backup.txt  seq_kt.txt  seq_kt_fullsequencial.txt  seq_kt_fullsequencial2.txt  sequence.txt  sequence_run.txt  test_1.txt  test_2.txt  test_prefixes.txt  testsequence.txt
src/action_tutorials_cpp/: CMakeLists.txt
src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
src/auto_weighting/: CMakeLists.txt  package.xml
src/auto_weighting/src/: frontdoor.cpp
src/camera_control/: package.xml  setup.py
src/camera_control/camera_control/: camera_control.py  camera_recorder.py
src/camera_control/camera_control/camera/: camera.py
src/cobotta_bcap/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/cobotta_bcap/cobotta_bcap/: cobotta_client.py  cobotta_control.py  cobotta_main.py  cobotta_unitest.py  cobottaxrd_client.py  cobottaxrd_control.py  cobottaxrd_main.py  io_control_service.py  io_controlxrd_service.py
src/cobotta_process/: CMakeLists.txt
src/cobotta_process/src/: cobotta_io.cpp
src/cppblank/: CMakeLists.txt  package.xml
src/cppblank/src/: instrument.cpp  instrument_main.cpp  insturment_node.cpp
src/data_handle/: package.xml  setup.cfg  setup.py
src/data_handle/data_handle/: data_handle.py  data_handle_node.py  subscribe_data.py
src/data_record/: CMakeLists.txt  package.xml
src/data_record/src/: data_record.cpp  record_main.cpp  record_node.cpp
src/email_msg/: package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/main_process/: CMakeLists.txt  package.xml
src/main_process/launch/: script_launch.py
src/main_process/src/: devices_state.cpp  main.cpp  main_broad.cpp  main_process.cpp  main_process_node.cpp  multnode.cpp  process_control.cpp  process_state.cpp  sequence.cpp  steps.txt  streamlitapp.py  test_process.cpp  test_step.txt
src/msg_format/: CMakeLists.txt  package.xml
src/msg_format/msg/: TestMsg.msg
src/msg_format/srv/: ProcessService.srv  TestSrv.srv
src/plc_control/: CMakeLists.txt  package.xml
src/plc_control/src/: plc.cpp  plc_control.cpp  plc_main.cpp  plc_node.cpp  plc_server.cpp  plc_socket.cpp  plc_unitest.cpp  plcxrd.cpp  plcxrd_main.cpp  plcxrd_node.cpp
src/pyblank/: package.xml  setup.cfg  setup.py
src/ros2_utils/: CMakeLists.txt  package.xml
src/ros2_utils/include/ros2_utils/: instrument_node.hpp  service_utils.hpp
src/ros2_utils/src/: instrument_node.cpp  service_utils.cpp
src/ros2_utils_py/: package.xml  setup.cfg  setup.py
src/ros2_utils_py/ros2_utils_py/: __init__.py  instrument_node.py  service_utils.py
src/slider_control/: CMakeLists.txt  package.xml
src/slider_control/src/: slider.cpp  slider_control.cpp  slider_main.cpp  slider_node.cpp  slider_unitest.cpp  sliderxrd.cpp  sliderxrd_main.cpp  sliderxrd_node.cpp
src/tcp_format/: CMakeLists.txt
src/tcp_handle/: CMakeLists.txt  package.xml
src/tcp_handle/include/tcp_handle/: tcp_socket.hpp
src/tcp_handle/src/: message_test.cpp  tcp_client.cpp  tcp_close.cpp  tcp_send.cpp  tcp_socket.cpp
src/template_c/: CMakeLists.txt  package.xml
src/template_py/: package.xml  setup.cfg  setup.py
src/thermocontrol/: package.xml  setup.cfg  setup.py
src/weighing_control/: CMakeLists.txt  package.xml
src/xrd_meas/: package.xml  setup.cfg  setup.py
(+230 files in other folders)
